@@ -55,7 +55,7 @@ export(autoread.ids, bai.in, bai.out, ccf.series.rwl, chron, cms,
        write.tucson, plot.rwl, interseries.cor, summary.rwl, plot.crn,
        insert.ring, delete.ring, xskel.ccf.plot, xskel.plot, latexify,
        latexDate, rasterPlot, treeMean, rwl.report, print.rwl.report, 
-       plotRings,time.rwl,time.crn,csv2rwl,pass.filt,as.rwl)
+       plotRings,time.rwl,time.crn,csv2rwl,pass.filt,as.rwl,sss)
 
 S3method(print, redfit)
 S3method(plot, rwl)
